--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                     <div class="result_images">
                         <span class="computer_result">
                             <img
-                                class="max-w-[350px]"
+                                class="w-[260px] h-[260px]"
                                 src="img/shuffleRock2.png"
                                 alt=""
                                 id="image1"
@@ -49,7 +49,7 @@
                     <div class="result_image">
                         <span class="user_result">
                             <img
-                                class="max-w-[350px]"
+                                class="w-[260px] h-[260px]"
                                 src="img/shuffleRock1.png"
                                 alt=""
                                 id="image2"
